<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.home.FragmentHome">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtGreetings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtGreetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/txt_greetings_good_morning"
                app:layout_constraintBottom_toBottomOf="@id/txtName"
                app:layout_constraintStart_toEndOf="@id/txtName" />

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="8"
                android:src="@drawable/img_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Buscador-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardOne"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtName">

                <EditText
                    android:id="@+id/edTxtSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:hint="@string/txt_search_visit"
                    android:padding="12dp"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtPlaceToVisit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardOne" />

            <!--Recycler-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPlaceToVisit"
                tools:itemCount="8"
                tools:listitem="@layout/item_place" />

            <!--Shimmer-->
            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPlaceToVisit">

                <LinearLayout
                    android:id="@+id/containerTwo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/item_place_shimmer" />

                    <include layout="@layout/item_place_shimmer" />

                    <include layout="@layout/item_place_shimmer" />

                    <include layout="@layout/item_place_shimmer" />

                    <include layout="@layout/item_place_shimmer" />

                    <include layout="@layout/item_place_shimmer" />

                    <include layout="@layout/item_place_shimmer" />

                    <include layout="@layout/item_place_shimmer" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <!--Alert-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardTwoAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardOne">

                <LinearLayout
                    android:id="@+id/alert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_Fintecimal"
                    android:padding="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/alertImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_visite_marker" />

                    <TextView
                        android:id="@+id/alertTxtOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_visi_complete"
                        android:textColor="@color/black_Fintecimal"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/alertTxtTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_alert_more"
                        android:textColor="@color/grey_two"
                        android:textSize="12sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--List Empty-->
            <TextView
                android:id="@+id/txtListEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_list_empty"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPlaceToVisit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>